@@ -142,9 +142,11 @@ abstract class JHtmlBehavior
 		window.addEvent('domready', function() {
 			$$('$selector').each(function(el) {
 				var title = el.get('title');
-				var parts = title.split('::', 2);
-				el.store('tip:title', parts[0]);
-				el.store('tip:text', parts[1]);
+				if (title) {
+					var parts = title.split('::', 2);
+					el.store('tip:title', parts[0]);
+					el.store('tip:text', parts[1]);
+				}
 			});
 			var JTooltips = new Tips($$('$selector'), $options);
 		});");
